--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/seeekr/fossa-test/issues"
   },
-  "homepage": "https://github.com/seeekr/fossa-test#readme"
+  "homepage": "https://github.com/seeekr/fossa-test#readme",
+  "dependencies": {
+    "micromatch": "^3.1.10"
+  }
 }
