--- a/package.json
+++ b/package.json
@@ -17,7 +17,5 @@
     "url": "https://github.com/seeekr/fossa-test/issues"
   },
   "homepage": "https://github.com/seeekr/fossa-test#readme",
-  "dependencies": {
-    "micromatch": "^3.1.10"
-  }
+  "dependencies": {}
 }
