--- a/package.json
+++ b/package.json
@@ -17,5 +17,7 @@
     "url": "https://github.com/seeekr/fossa-test/issues"
   },
   "homepage": "https://github.com/seeekr/fossa-test#readme",
-  "dependencies": {}
+  "dependencies": {
+    "micromatch": "^3.1.10"
+  }
 }
